@@ -13,6 +13,8 @@ Core and Builtins
   the following case: sys.stdin.read() stopped with CTRL+d (end of file),
   raw_input() interrupted by CTRL+c.
 
+- dict_proxy objects now display their contents rather than just the class name.
+
 Library
 -------
 
